kubernetes/apps/observability/grafana-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: n8n-prod
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
